# AoC-2021

./: .clang-tidy  .gitignore  CMakeLists.txt  README.md
.github/workflows/: cpp.yml
rust_part/: CMakeLists.txt  Cargo.toml
rust_part/src/: lib.rs
src/: controller.hpp  main.cpp  matcher.hpp  utils.hpp
src/aoc_cxx/: day01.cpp  day01xsimd.cpp  day02.cpp  day03.cpp  day04.cpp  day05.cpp  day06.cpp  day07.cpp  day08.cpp  day09.cpp  day10.cpp  day11.cpp  day12.cpp  day13.cpp  day14.cpp  day15.cpp
src/aoc_rust/: CMakeLists.txt  Cargo.toml  build.rs
src/aoc_rust/src/: day01.rs  day02.rs  day03.rs  day13.rs  day14.rs  day15.rs  lib.rs
src/commands/: basic.cpp  day01.cpp  day01xsimd.cpp  day02.cpp
